--- a/vignettes/foram_intro.Rmd
+++ b/vignettes/foram_intro.Rmd
@@ -20,8 +20,8 @@ library(BPER)
 
 
 Load a nx8 (8 column, n row(s)) data object, with columns ordered as: age, d11B, d11B2s, d11Bspec, Mg/Ca, Mg/Ca2s, d18O, d18O2s. 
-The column order matters. Indicate modern species' d11B vital effects to be applied for d11Bspec. Options currently include: 'Grub' 
-(G. ruber), 'Tsac' (T. sacculifer), 'Ouni' (O. universa), 'custom' (specify values below in 'priors_in_foram.R'), or 'borate'.
+The column order matters. Indicate names of modern species' d11B vital effects to be applied for d11Bspec. Options currently include: 
+'Grub' (G. ruber), 'Tsac' (T. sacculifer), 'Ouni' (O. universa), 'custom' (specify values below in 'priors_in_foram.R'), or 'borate'.
 
 Run the 'load_foram' function on the input data. 
 ```{r}
@@ -30,7 +30,7 @@ x <- data.frame(c(55956, 55956, 55954, 55932, 55926, 55924, 55901, 55899), c(14.
                 c(3.26, NA, 3.33, 5.04, NA, 4.83, NA, NA), c(0.1, NA, 0.1, 0.15, NA, 0.14, NA, NA), 
                 c(NA, NA, NA, -2.14, NA, -1.98, -2.19, -1.99), c(NA, NA, NA, 0.16, NA, 0.16, 0.16, 0.16))
 
-load_foram <- load_foram(foram_data = x)
+lf_out <- load_foram(foram_data = x)
 ```
 
 
@@ -38,18 +38,18 @@ Take the returned list from 'load_foram' and use it for 'load_proxy' argument in
 used in the data set ('kyr' or 'Myr'), the time step type ('step_type'): 'regular' for evenly spaced intervals or 'every' for a time step
 for every unique age in the data set. If 'regular' is specified, specify the step interval ('step_int'). 
 ```{r}
-age_index <- age_index(load_proxy = load_foram, age_units = 'kyr', step_type = 'every')
+ai_out <- age_index(load_proxy = lf_out, age_units = 'kyr', step_type = 'every')
 ```
 
 
 Use 'clean_foram' function on the return list from 'age_index' to compile and structure observational data for the MCMC inversion.
 ```{r}
-clean_obs <- clean_foram(age_index = age_index)
+clean_obs <- clean_foram(age_index = ai_out)
 ```
 
 
 Many of the parameter values, including those that define priors,can be revised using 'parms_foram_adjust' function. There are two arguments in this function, for 'parms2change' provide a vector of character strings for the parameters you would like to adjust from default values.
-The user-changeable parameters are listed in the helkp documentation of this function. For 'change_values' argument, provide a vector of numeric values which correspond to the parameter names in 'parms2change'. To demonstrate, we will adjust the temperature and d11Bsw prior distribution parameters.
+The user-changeable parameters are listed in the help documentation of this function. For 'change_values' argument, provide a vector of numeric values which correspond to the parameter names in 'parms2change'. To demonstrate, we will adjust the temperature and d11Bsw prior distribution parameters.
 ```{r}
 parm_names <- c("tempC.m", "tempC.sd", "d11Bsw.m", "d11Bsw.sd")
 parm_values <- c(23, 4, 38.35, 0.75)
@@ -68,10 +68,10 @@ record should span the data interval, but values do not need to be included for 
 interpolated to create a time-continuous record. 'priors_foram' can take several minutes to run.
 ```{r}
 
-dic_pri <- data.frame(c(56200, 55934, 55928, 55919, 55900, 55883), c(2.320, 2.328, 2.405, 2.440, 2.481, 2.500), 
-                      c(0.15, 0.15, 0.15, 0.15, 0.15, 0.15)) 
+dic_pri <- data.frame(c(56200, 55934, 55928, 55919, 55900, 55883), c(2320, 2328, 2405, 2440, 2481, 2500), 
+                      c(150, 150, 150, 150, 150, 150)) 
 
-priors_foram <- priors_foram(parms_foram_adj = parms_foram_adj, age_index = age_index, cc2ndparm.vt = 'dic', cc2ndparm.pt = 'ts', 
+pf_out <- priors_foram(parms_foram_adj = parms_foram_adj, age_index = ai_out, cc2ndparm.vt = 'dic', cc2ndparm.pt = 'ts', 
                              cc2ndparmTS = dic_pri)
 ```
 
@@ -84,9 +84,8 @@ i.e., saves every 'n'th iteration). The model can take several minutes to initia
 A list is returned with MCMC data object 'jout' as the first object. It is recommended that you take a look at the statistical
 parameters 'Rhat' and 'n.eff' in 'inv_out$jout$BUGSoutput$summary' to make sure they are acceptable.
 ```{r}
-inv_out <- run_inversion(clean_obs = clean_obs, priors_foram = priors_foram,
-                          save.parms = c("sal", "tempC", "xca", "xmg", "xso4", "d11Bsw", "d18Osw", "d18Osw.local","pco2", "dic", "pH", "press"),
-                          n.iter = 10000, n.chains = 3, n.burnin = 3000, n.thin = 1)
+inv_out <- run_inversion(clean_obs = clean_obs, priors_foram = pf_out,
+                          save.parms = c("sal", "tempC", "xca", "xmg", "xso4", "d11Bsw", "d18Osw", "d18Osw.local","pco2", "dic", "pH", "press"), n.iter = 10000, n.chains = 3, n.burnin = 3000, n.thin = 1)
 ```
 
 
